--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "apollo-link-context": "^1.0.20",
     "dotenv": "^14.1.0",
     "graphql": "^16.2.0",
     "react": "^17.0.2",
